--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -7,8 +7,8 @@ br
 .back-image-index.back-image-top
   .row
     .col-sm-6
-       = image_tag "pc-main.webp", class: "main-image pc-image"
-       = image_tag "smart-main.webp", class: "main-image mobile-image"
+       = image_tag "pc-main.webp", class: "pc-image"
+       = image_tag "smart-main.webp", class: "mobile-image"
     .col-sm-6
         br
         .index-3
@@ -48,7 +48,7 @@ br
  br/
  br/
  .center
-     =image_tag 'image001.webp', width: '80%', class: 'center'
+     =image_tag 'image001.webp', width: '95%', class: 'center'
 
 .row#anchor
    .col-sm-12.center
@@ -60,7 +60,7 @@ br/
  br/
  br/
  .center
-     =image_tag 'image002.webp', width: '80%', class: 'center'
+     =image_tag 'image002.webp', width: '95%', class: 'center'
 
 br
 br
@@ -94,7 +94,7 @@ br
  br/
  br/
  .center
-     =image_tag 'image003.webp', width: '80%', class: 'center'
+     =image_tag 'image003.webp', width: '95%', class: 'center'
 br
 br
 hr.line
