--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -174,6 +174,7 @@
 @media only screen and (min-width: 600px) {
   .pc-image {
     display: block; // PCビューではPC向けの画像を表示します
+    width: 105%;
   }
 
   .mobile-image {
