--- a/app/views/columns/index.html.slim
+++ b/app/views/columns/index.html.slim
@@ -3,7 +3,7 @@
 
 .index-wrapper
       h1.headline
-        | 自販機設置記事一覧
+        | ファクタリング記事一覧
       .row.all-width
        - @columns.each do |column|
         .col-sm-6
