--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -7,11 +7,10 @@ br
 .back-image-index.back-image-top
   .row
     .col-sm-6
-       = image_tag "pc-main.webp", class: "pc-image"
-       = image_tag "smart-main.webp", class: "mobile-image"
+       = image_tag "pc-main.webp", class: "pc-image", alt:"ファクタリングの一括比較見積『ファクタリンク』なら、売掛金の売却で借金無しで資金調達します。"
+       = image_tag "smart-main.webp", class: "mobile-image", alt:"ファクタリングの一括比較見積『ファクタリンク』なら、売掛金の売却で借金無しで資金調達します。"
     .col-sm-6
-        br
-        .index-3
+        h1.index-3
          | 最短即日の企業資金調達なら
          br
          | ファクタリング一括見積の
@@ -22,7 +21,7 @@ br
          span
            | \ カンタン60秒入力! /
         =link_to '/estimates/new' do
-         =image_tag 'click3.webp', width: '100%', class: 'center'
+         =image_tag 'click3.webp', width: '100%', class: 'center', alt:"ファクタリング一括見積りへまずは無料で一括見積"
         
 
 br
@@ -48,7 +47,7 @@ br
  br/
  br/
  .center
-     =image_tag 'image001.webp', width: '95%', class: 'center'
+     =image_tag 'image001.webp', width: '95%', class: 'center', alt:"ファクタリングとは？ファクタリングとは、例えば来月の資金が不足している企業がファクタリング会社に売掛金（請求書）を売却することでキャッシュフローを改善することができるサービスです。ファクタリング会社には、最短で即日現金が振り込まれるメリットがあります。"
 
 .row#anchor
    .col-sm-12.center
@@ -60,7 +59,7 @@ br/
  br/
  br/
  .center
-     =image_tag 'image002.webp', width: '95%', class: 'center'
+     =image_tag 'image002.webp', width: '95%', class: 'center', alt:"通常の場合、企業が直接何社かに問い合わせを行い、企業の比較を行います。しかし、この作業は問い合わせを何度も行う必要があるため非常に労力のかかる手間があります。ファクタリング一括見積り『ファクタリンク』を活用すれば、完全無料で利用ができ、マッチする企業のみをファクタリング一括見積もりの『ファクタリンク』が厳選した企業をご紹介します。ユーザーは最安値の手数料企業を簡単に比較することができ、条件にマッチした最適な企業と取引することができます。"
 
 br
 br
@@ -75,7 +74,7 @@ br
    span
      | \ カンタン60秒入力! /
    = link_to "#anchor" do
-     =image_tag 'click3.webp', width: '70%', class: 'center'
+     =image_tag 'click3.webp', width: '70%', class: 'center', alt:"ファクタリング一括見積りへまずは無料で一括見積"
   .center   
     | ※個人の方は申し込みできません。
 
@@ -94,7 +93,7 @@ br
  br/
  br/
  .center
-     =image_tag 'image003.webp', width: '95%', class: 'center'
+     =image_tag 'image003.webp', width: '95%', class: 'center', alt:"ファクタリング一括見積もりの『ファクタリンク』はこのような方におすすめのサービスです。請求書の期日が近いのに支払いができない。来月の支払いがあるのに資金が不足している。売掛金の入金サイクルが遅くキャッシュが回らない。短期的な資金調達を行いたい。ファクタリングの審査に過去通らなかった。落ちてしまった。"
 br
 br
 hr.line
@@ -120,7 +119,7 @@ br
    span
      | \ カンタン60秒入力! /
    = link_to "/estimates/new" do
-     =image_tag 'click3.webp', width: '70%', class: 'center'
+     =image_tag 'click3.webp', width: '70%', class: 'center', alt:"ファクタリング一括見積りへまずは無料で一括見積"
   .center   
     | ※個人の方は申し込みできません。
 
@@ -134,25 +133,25 @@ br
         | ファクタリングは借金？
 
 .top-wrapper
- p.center 『ファクタリング』を利用頂く際に安心できるのは、【借金ではない】こと。審査はあるものの、貸金業ではないので、負債の情報が信用情報に掲載されたり、法的な借金を背負うリスクが一切ありません。そのため融資のように数百万〜数千万の事業展開に利用するのと用途は異なり、あくまでキャッシュフローの改善のための資金調達として活用できます。
+ p.center ファクタリングを利用頂く際に安心できるのは、【借金ではない】こと。審査はあるものの、貸金業ではないので、負債の情報が信用情報に掲載されたり、法的な借金を背負うリスクが一切ありません。そのため融資のように数百万〜数千万の事業展開に利用するのと用途は異なり、あくまでキャッシュフローの改善のための資金調達として活用できます。
  br
 
  .row.center
    .col-sm-4
      h3.head 借金では無く売掛金の売却
-     =image_tag 'image1.webp', width: '95%', class: 'center'
+     =image_tag 'image1.webp', width: '95%', class: 'center', alt:"ファクタリングは借金ではなく売掛金の売却のため、借入ではありません。"
      p.center 企業に保有する売掛金があればご利用いただけます。
      br
      p.text
    .col-sm-4
      h3.head 貸金と比較し簡単審査と証明のみ
-     =image_tag 'image2.webp', width: '95%', class: 'center'
+     =image_tag 'image2.webp', width: '95%', class: 'center', alt:"ファクタリングは、融資と比較しても審査が緩く、90%以上の審査通過率があるため、誰でも簡単に利用できます。"
      p.center 本人確認・売掛金・決算書等を提出することでファクタリングを行うことができます。
      br
      p.text
    .col-sm-4
      h3.head 信用情報にも傷がつかない
-     =image_tag 'image3.webp', width: '95%', class: 'center'
+     =image_tag 'image3.webp', width: '95%', class: 'center',alt:"CIC等の信用情報に傷をつけずにファクタリングなら取引することができます。"
      p.center 金融情報にも一切傷をつけることなく取引いただけます。
      br
      p.text
@@ -169,33 +168,33 @@ br
  .row.center
    .col-sm-4
      h3.head 最短即日現金化
-     =image_tag 'trouble1.webp', width: '95%', class: 'center'
+     =image_tag 'trouble1.webp', width: '95%', class: 'center', alt:"ファクタリングなら最短申し込みより即日で現金化することができます。"
      p.center 融資等の資金調達の場合、審査に1ヶ月〜2ヶ月ほど時間がかかるのに対して、ファクタリングなら最短即日で融資が受けられるため、スムーズな資金調達が可能となります。
      br
    .col-sm-4
      h3.head 売掛金があれば利用出来る
-     =image_tag 'trouble2.webp', width: '95%', class: 'center'
+     =image_tag 'trouble2.webp', width: '95%', class: 'center', alt:"ファクタリングは売掛金があれば誰でも利用できるものです。社内にある売掛金をチェックしましょう。"
      p.center 請求は発生しているものの、未入金の売掛金があれば、法人様・個人事業主様ともにご利用いただくことができます。
      br
    .col-sm-4
      h3.head 借金を背負わず資金調達
-     =image_tag 'trouble3.webp', width: '95%', class: 'center'
+     =image_tag 'trouble3.webp', width: '95%', class: 'center', alt:"ファクタリングは融資やローンのように借金を背負うことなく、売掛金の売却を行うことにより、円滑な資金調達が可能となります。"
      p.center ファクタリングはあくまで売掛金の買取という特性上、借金ではないので、金融情報に履歴が残らず安心です。
      br
  .row.center
    .col-sm-4
      h3.head リーズナブルな手数料
-     =image_tag 'trouble4.webp', width: '95%', class: 'center'
+     =image_tag 'trouble4.webp', width: '95%', class: 'center', alt:"ファクタリングは2社間・3社間とどのような契約方式を選択するかにもよりますが、ファクタリング一括比較見積もり『ファクタリンク』をご利用いただくことによりリーズナブルにご利用することができます。"
      p.center どのような取引方法を選ぶかにもよりますが、手数料は低価格からご利用いただけます。
      br
    .col-sm-4
      h3.head 無理なく相談しながら返済できる
-     =image_tag 'trouble5.webp', width: '95%', class: 'center'
+     =image_tag 'trouble5.webp', width: '95%', class: 'center', alt:"ファクタリングは、返済計画を決定した上での契約となりますので、無理なく相談して返済することができます。"
      p.center 返済についても契約前に相談しながら決定することができるので、安心して取引ができます。
      br
    .col-sm-4
      h3.head 経済産業省も推奨
-     =image_tag 'trouble6.webp', width: '95%', class: 'center'
+     =image_tag 'trouble6.webp', width: '95%', class: 'center', alt:"ファクタリングは近年知られてきた資金調達方法となりますが、経済産業省にも推奨されているものなので安心して利用することができます。"
      p.center ファクタリングは経済産業省でも推奨されている資金調達方法で今や一般的な調達方法として知られています。
      br
 
@@ -211,7 +210,7 @@ br
    span
      | \ カンタン60秒入力! /
    = link_to "#anchor" do
-     =image_tag 'click3.webp', width: '70%', class: 'center'
+     =image_tag 'click3.webp', width: '70%', class: 'center', alt:"ファクタリング一括見積りへまずは無料で一括見積"
   .center   
     | ※個人の方は申し込みできません。
 
@@ -231,33 +230,33 @@ br
  .row.center
    .col-sm-4
      h3.head 一括見積費用無料
-     =image_tag 'image10.webp', width: '95%', class: 'center'
+     =image_tag 'image10.webp', width: '95%', class: 'center', alt:"ファクタリング一括見積もり『ファクタリンク』は利用料金は一才いただくことなく、無料でご利用頂くことができます。"
      p.center 当社はファクタリング会社をご紹介するのみとなり、ユーザー様から費用をいただくことはありません。
      br
    .col-sm-4
      h3.head 個人事業主・フリーランスもお任せ
-     =image_tag 'image11.webp', width: '95%', class: 'center'
+     =image_tag 'image11.webp', width: '95%', class: 'center', alt:"ファクタリング一括見積もり『ファクタリンク』は法人様はもちろんの事、個人事業主様やフリーランスの方でも利用する事ができます。"
      p.center 個人事業主やフリーランスがご利用頂けるファクタリング会社を厳選してご紹介可能です。
      br
    .col-sm-4
      h3.head 全国どこでもご利用可能
-     =image_tag 'image12.webp', width: '95%', class: 'center'
+     =image_tag 'image12.webp', width: '95%', class: 'center', alt:"ファクタリング一括見積もり『ファクタリンク』は日本全国のファクタリング会社と取引を行っているため、どこの地域からでもご利用頂く事ができます。"
      p.center ファクタリング会社それぞれにある対応エリアも全て把握しているため、円滑にファクタリング会社のご紹介ができます。
      br
  .row.center
    .col-sm-4
      h3.head 最安値手数料が見つかる
-     =image_tag 'image13.webp', width: '95%', class: 'center'
+     =image_tag 'image13.webp', width: '95%', class: 'center', alt:"ファクタリング一括見積もり『ファクタリンク』は少額からでも利用する事ができます。少額利用可能の企業を厳選してご紹介しますので、ご安心ください。"
      p.center 一括見積をご利用いただくことで、最安値のファクタリング会社を見つけることができます。
      br
    .col-sm-4
      h3.head 少額からの利用も可能
-     =image_tag 'image14.webp', width: '95%', class: 'center'
+     =image_tag 'image14.webp', width: '95%', class: 'center', alt:"ファクタリングはまだまだ歴史が浅いため、悪徳企業も存在するのが現実。ファクタリング一括見積もり『ファクタリンク』では、怪しい会社は排除し、優良企業のみをご案内致します。"
      p.center 各ファクタリング会社の情報を把握しているため、ご利用に沿ったご案内をいたします。
      br
    .col-sm-4
      h3.head 怪しい会社は排除します！
-     =image_tag 'image15.webp', width: '95%', class: 'center'
+     =image_tag 'image15.webp', width: '95%', class: 'center', alt:"ファクタリング一括見積もり『ファクタリンク』は法人様はもちろんの事、個人事業主様やフリーランスの方でも利用する事ができます。"
      p.center ファクタリンクは小規模会社が多く、高額手数料を請求する企業もありますが、全て排除します。
      br
 
@@ -304,7 +303,7 @@ br
    span
      | \ カンタン60秒入力! /
    = link_to "/estimates/new" do
-     =image_tag 'click3.webp', width: '70%', class: 'center'
+     =image_tag 'click3.webp', width: '70%', class: 'center', alt:"ファクタリング一括見積りへまずは無料で一括見積"
   .center   
     | ※個人の方は申し込みできません。
 
@@ -370,7 +369,7 @@ br
    span
      | \ カンタン60秒入力! /
    = link_to "/estimates/new" do
-     =image_tag 'click3.webp', width: '70%', class: 'center'
+     =image_tag 'click3.webp', width: '70%', class: 'center', alt:"ファクタリング一括見積りへまずは無料で一括見積"
   .center   
     | ※個人の方は申し込みできません。
 
