--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,7 +7,7 @@ html
       .row
         .col-xs-3
            = link_to "/"
-            =image_tag "rogo.webp", class:"header-image", alt:"自動販売機の設置なら自販機ねっと"
+            =image_tag "rogo.webp", class:"header-image", alt:"ファクタリングの一括比較見積りなら『ファクタリンク』"
         .col-xs-7
         .col-xs-2
                 .navToggle
@@ -52,39 +52,6 @@ html
                    - if admin_signed_in?
                     = link_to 'マイページ', admin_path(current_admin)
 
-        /nav.globalMenuSp
-           ul
-            li
-              = link_to  'トップページ', '/' , class: "col-md"
-            li
-              = link_to  '人材企業サーチ', '/lists' , :class=>"col-md"
-            li
-              = link_to  '記事一覧', '/posts' , :class=>"col-md"
-            li
-              = link_to  'よくある質問', '/faq' , :class=>"col-md"
-            li
-              = link_to  '会社概要', '/co' , :class=>"col-md"
-            li
-              = link_to  '問い合わせ', '/contact' , :class=>"col-md"
-            li
-              - if user_signed_in?
-               = link_to "マイページ", user_path(current_user)
-              - else
-               = link_to '相談者ログイン', new_user_session_path , :class=>"col-md"
-            li
-              - if member_signed_in?
-               = link_to 'マイページ', member_path(current_member)
-              - else
-               = link_to '参画企業ログイン', new_member_session_path , :class=>"col-md"
-              - if worker_signed_in?
-            li
-              - if worker_signed_in?
-               = link_to 'マイページ', worker_path(current_worker)
-              - else
-               = link_to '作業者ログイン', new_worker_session_path , :class=>"col-md"
-            li
-              - if admin_signed_in?
-               = link_to 'マイページ', admin_path(current_admin)
 
 
   body
@@ -96,3 +63,7 @@ html
       .bread
         = render_breadcrumbs separator: ' > '
       = yield
+  br
+  br
+  footer
+   = render template: 'layouts/_footer.html.slim'
