--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -1,5 +1,5 @@
-- set_meta_tags  title: ''
-- set_meta_tags  description: ''
+- set_meta_tags  title: 'ファクタリングの一括比較見積もりなら『ファクタリンク』'
+- set_meta_tags  description: '『ファクタリンク』は、ファクタリングの一括比較見積もりサイトです。ファクタリングを利用したいユーザーに向けて最適な企業を複数紹介する事で、最安値の企業と取引する事ができます。'
 /#トップ
 br
 br
