--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -5,7 +5,7 @@ footer
     = link_to "ITビッグデータ活用型テレマーケティング代行『アポ匠』", "https://ri-plus.jp", target:"_brank"
     br
    .link.col-xs-6.height
-    = link_to "自販機一括見積り『自販機ねっと』", asahi_path
+    = link_to "自販機一括見積り『自販機ねっと』", "https://自販機.net", target:"_brank"
     br
 
   br/
