--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -270,27 +270,76 @@ br/
  br
   .cp_qa
     .cp_actab.left
-      input#cp_tabfour031[type="checkbox" name="tabs"]
-      label[for="cp_tabfour031"]
+      input#cp_tabfour028[type="checkbox" name="tabs"]
+      label[for="cp_tabfour028"]
         | 請求書や売掛金がないと利用できないの？
       .cp_actab-content
         p
           | おっしゃる通り、ファクタリングは売掛金で入金未回収を事前に買い取るサービスとなります。そのため売掛金が存在しないとご利用いただくことはできません。
     .cp_actab.left
-      input#cp_tabfour032[type="checkbox" name="tabs"]
-      label[for="cp_tabfour032"]
+      input#cp_tabfour029[type="checkbox" name="tabs"]
+      label[for="cp_tabfour029"]
         | 2社間ファクタリングと3社間ファクタリングどっちの手数料が安い？
       .cp_actab-content
         p
           | こちらは3社間ファクタリングの方が低価格の手数料でご利用いただけます。3社間の場合、取引先に請求を出来ることもあり、未回収リスクが格段に減るためです。
     .cp_actab.left
-      input#cp_tabfour033[type="checkbox" name="tabs"]
-      label[for="cp_tabfour033"]
+      input#cp_tabfour030[type="checkbox" name="tabs"]
+      label[for="cp_tabfour030"]
         | 一括見積もりファクタリンクを利用した方が手数料が安くなるのは本当？
       .cp_actab-content
         p
           | はい。実際ファクタリング会社は国の機関ではなく民間企業となります。そのため交渉で契約を行うため、1社のみの問い合わせでは実際に高額な手数料が発生することも多く報告されています。複数のファクタリング会社を利用することにより、条件比較や交渉により一番安い手数料でご利用頂くことができます。
-          
+    .cp_actab.left
+      input#cp_tabfour031[type="checkbox" name="tabs"]
+      label[for="cp_tabfour031"]
+        | 2社間ファクタリングとは？
+      .cp_actab-content
+        p
+          | 2社間ファクタリングは、企業（売主）が自社の売掛金を、専門のファクタリング会社に販売することで現金を得る方式を指します。この場合、売主とファクタリング会社の2社間で取引が行われ、売掛金の買取後はファクタリング会社が売掛金の回収を行います。
+    .cp_actab.left
+      input#cp_tabfour032[type="checkbox" name="tabs"]
+      label[for="cp_tabfour032"]
+        | 3社間ファクタリングとは？
+      .cp_actab-content
+        p
+          | 3社間ファクタリングは、売主（売掛金を持つ企業）、買主（売掛金を支払う企業）、そしてファクタリング会社の3者間で取引が行われる方式を指します。売主は売掛金をファクタリング会社に売却し、その後、ファクタリング会社が直接買主から売掛金を回収します。
+    .cp_actab.left
+      input#cp_tabfour033[type="checkbox" name="tabs"]
+      label[for="cp_tabfour033"]
+        | ファクタリングで取引先にバレる心配は？
+      .cp_actab-content
+        p
+          | ファクタリングの形式によります。特に3社間ファクタリングの場合、ファクタリング会社が直接買主から売掛金を回収するため、取引が明らかになる可能性があります。しかし、これはファクタリング契約を行う事業主の希望に基づくため、2社間ファクタリングであれば、取引先にバレる心配はありません。
+    .cp_actab.left
+      input#cp_tabfour034[type="checkbox" name="tabs"]
+      label[for="cp_tabfour034"]
+        | 複数のファクタリング会社に見積を行うメリットは？
+      .cp_actab-content
+        p
+          | 複数のファクタリング会社から見積もりを取ることで、サービス内容や費用、対応速度などを比較することが可能になります。これにより、自社のニーズに最も適したファクタリング会社を選ぶことができ、経済的な利益を最大化することが可能になります。 
+    .cp_actab.left
+      input#cp_tabfour035[type="checkbox" name="tabs"]
+      label[for="cp_tabfour035"]
+        | ファクタリングの契約はオンライン契約できる？
+      .cp_actab-content
+        p
+          | ファクタリング会社によりますが、デジタル化が進んでいる現在では、一部のファクタリング会社ではオンラインでの契約が可能です。 
+    .cp_actab.left
+      input#cp_tabfour033[type="checkbox" name="tabs"]
+      label[for="cp_tabfour033"]
+        | ファクタリングとローンの違いは？
+      .cp_actab-content
+        p
+          | ファクタリングは売掛金の買い取りを行うサービスで、ローンとは異なり追加の担保や保証人が必要ないという特徴があります。また、ファクタリングは、売掛金の買取による現金化であるため、売上と連動していると言えます。一方、ローンは資金を借り入れる形で、返済条件や利息、担保や保証人が求められることが多いです。
+    .cp_actab.left
+      input#cp_tabfour036[type="checkbox" name="tabs"]
+      label[for="cp_tabfour036"]
+        | ファクタリングと融資の違いは？
+      .cp_actab-content
+        p
+          | ファクタリングは売掛金を即時に現金化するための手段であり、貸し手となるファクタリング会社が売掛金を買取ります。一方、融資は金融機関から一定の条件のもとで資金を借りることを指します。融資は返済計画と利息支払いが必要となりますが、ファクタリングは売上に連動しており、独自の返済計画は必要ありません。
+ 
 
 br
 br
@@ -308,8 +357,134 @@ br
     | ※個人の方は申し込みできません。
 
 
-br
-br
+.row
+   .col-sm-12.center
+     h2.surprise
+      | ご利用頂いたお客様のレビュー
+br/
+.top-wrapper
+ p.center ファクタリング一括見積『ファクタリンク』をお申し込みいただき、実際にファクタリングサービスを活用頂いた方のカスタマーレビューをご案内しております。
+ br
+
+.row
+ .col-xs-6
+   table.review.left
+     col[width="30%"]
+     col[width="70%"]
+     tbody
+       tr
+         th.title[colspan="2"]
+          .center
+           | 40代男性　個人事業主　現場関係
+       tr
+         th
+           = image_tag "user.webp", width:"100%";
+         td
+           | 「個人事業主で信頼がなく、資金繰りが大きな課題でした。ファクタリングを利用しようと考えたものの、審査が心配でなかなか踏み出せませんでした。しかし『ファクタリンク』を利用して一括で見積もりを取ったところ、個人事業主でもスムーズに審査を通過する会社があり、すぐに資金を得ることができました。サポートも充実しており、大変助かりました。」
+ .col-xs-6
+   table.review.left
+     col[width="30%"]
+     col[width="70%"]
+     tbody
+       tr
+         th.title[colspan="2"]
+          .center
+           | 60代男性　製造工場
+       tr
+         th
+           = image_tag "user.webp", width:"100%";
+         td
+           | 「大規模なプロジェクトを立ち上げるにあたり、大きな資金調達が必要となりました。各社のファクタリングサービスを比較する時間もありませんでしたが、『ファクタリンク』の一括見積もりサービスのおかげで迅速に適切なファクタリング会社を見つけることができました。結果、プロジェクトは無事にスタートし、現在も順調に進行しています。」
+br/
+.row
+ .col-xs-6
+   table.review.left
+     col[width="30%"]
+     col[width="70%"]
+     tbody
+       tr
+         th.title[colspan="2"]
+          .center
+           | 40代男性　個人事業主　現場関係
+       tr
+         th
+           = image_tag "user.webp", width:"100%";
+         td
+           | 「過去に別のファクタリング会社に申し込みましたが、残念ながら審査に落ちてしまいました。しかし『ファクタリンク』の一括見積もりサービスを使うことで、自社に合った複数のファクタリング会社を見つけることができ、今では無事にファクタリングを利用して資金調達を行っています。」
+ .col-xs-6
+   table.review.left
+     col[width="30%"]
+     col[width="70%"]
+     tbody
+       tr
+         th.title[colspan="2"]
+          .center
+           | 40代女性　美容業
+       tr
+         th
+           = image_tag "user.webp", width:"100%";
+         td
+           | 「これまで一社だけのファクタリング会社に頼っていましたが、『ファクタリンク』の一括見積もりサービスを利用してみると、同じサービス内容でより手数料が低い会社が見つかりました。見積もりを比較することで手数料を抑えられることを実感しました。」
+br/
+.row
+ .col-xs-6
+   table.review.left
+     col[width="30%"]
+     col[width="70%"]
+     tbody
+       tr
+         th.title[colspan="2"]
+          .center
+           | 30代男性　法人
+       tr
+         th
+           = image_tag "user.webp", width:"100%";
+         td
+           | 「急な資金需要が発生し、スピーディな対応が必要でした。『ファクタリンク』の一括見積もりは即座に反応し、直ぐに複数の見積もりが手に入りました。その結果、迅速にファクタリング会社を見つけ、資金繰りの問題を解決することができました。」
+ .col-xs-6
+   table.review.left
+     col[width="30%"]
+     col[width="70%"]
+     tbody
+       tr
+         th.title[colspan="2"]
+          .center
+           | 40代男性　コンサルティング
+       tr
+         th
+           = image_tag "user.webp", width:"100%";
+         td
+           | 「資金繰りのためにファクタリングを利用しようと思ったものの、どの会社を選べば良いか分からず困っていました。『ファクタリンク』の一括見積もりサービスは使いやすく、初めてでも安心して利用できました。今では定期的に利用しています。」
+br/
+.row
+ .col-xs-6
+   table.review.left
+     col[width="30%"]
+     col[width="70%"]
+     tbody
+       tr
+         th.title[colspan="2"]
+          .center
+           | 50代男性　個人事業主　青森県
+       tr
+         th
+           = image_tag "user.webp", width:"100%";
+         td
+           | 「『ファクタリンク』を通じて初めてファクタリングのオンライン契約を行いました。ご紹介頂いた会社様に丁寧に対応いただき、簡単に契約できました。」
+ .col-xs-6
+   table.review.left
+     col[width="30%"]
+     col[width="70%"]
+     tbody
+       tr
+         th.title[colspan="2"]
+          .center
+           | 50代男性　法人　高知県
+       tr
+         th
+           = image_tag "user.webp", width:"100%";
+         td
+           | 「ファクタリング会社にはそれぞれ対応エリアがあるようで、どこを選べば良いか分からず『ファクタリンク』の一括見積もりを利用しました。いずれも私の地域でも対応可能な業者をご紹介いただき円滑に取引できました。」
 
 
 br
