--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -367,7 +367,7 @@ br/
  br
 
 .row
- .col-xs-6
+ .col-sm-6
    table.review.left
      col[width="30%"]
      col[width="70%"]
@@ -381,7 +381,8 @@ br/
            = image_tag "user.webp", width:"100%";
          td
            | 「個人事業主で信頼がなく、資金繰りが大きな課題でした。ファクタリングを利用しようと考えたものの、審査が心配でなかなか踏み出せませんでした。しかし『ファクタリンク』を利用して一括で見積もりを取ったところ、個人事業主でもスムーズに審査を通過する会社があり、すぐに資金を得ることができました。サポートも充実しており、大変助かりました。」
- .col-xs-6
+ br/
+ .col-sm-6
    table.review.left
      col[width="30%"]
      col[width="70%"]
@@ -397,7 +398,7 @@ br/
            | 「大規模なプロジェクトを立ち上げるにあたり、大きな資金調達が必要となりました。各社のファクタリングサービスを比較する時間もありませんでしたが、『ファクタリンク』の一括見積もりサービスのおかげで迅速に適切なファクタリング会社を見つけることができました。結果、プロジェクトは無事にスタートし、現在も順調に進行しています。」
 br/
 .row
- .col-xs-6
+ .col-sm-6
    table.review.left
      col[width="30%"]
      col[width="70%"]
@@ -411,7 +412,8 @@ br/
            = image_tag "user.webp", width:"100%";
          td
            | 「過去に別のファクタリング会社に申し込みましたが、残念ながら審査に落ちてしまいました。しかし『ファクタリンク』の一括見積もりサービスを使うことで、自社に合った複数のファクタリング会社を見つけることができ、今では無事にファクタリングを利用して資金調達を行っています。」
- .col-xs-6
+ br/
+ .col-sm-6
    table.review.left
      col[width="30%"]
      col[width="70%"]
@@ -427,7 +429,7 @@ br/
            | 「これまで一社だけのファクタリング会社に頼っていましたが、『ファクタリンク』の一括見積もりサービスを利用してみると、同じサービス内容でより手数料が低い会社が見つかりました。見積もりを比較することで手数料を抑えられることを実感しました。」
 br/
 .row
- .col-xs-6
+ .col-sm-6
    table.review.left
      col[width="30%"]
      col[width="70%"]
@@ -441,7 +443,8 @@ br/
            = image_tag "user.webp", width:"100%";
          td
            | 「急な資金需要が発生し、スピーディな対応が必要でした。『ファクタリンク』の一括見積もりは即座に反応し、直ぐに複数の見積もりが手に入りました。その結果、迅速にファクタリング会社を見つけ、資金繰りの問題を解決することができました。」
- .col-xs-6
+ br/
+ .col-sm-6
    table.review.left
      col[width="30%"]
      col[width="70%"]
@@ -457,7 +460,7 @@ br/
            | 「資金繰りのためにファクタリングを利用しようと思ったものの、どの会社を選べば良いか分からず困っていました。『ファクタリンク』の一括見積もりサービスは使いやすく、初めてでも安心して利用できました。今では定期的に利用しています。」
 br/
 .row
- .col-xs-6
+ .col-sm-6
    table.review.left
      col[width="30%"]
      col[width="70%"]
@@ -471,7 +474,8 @@ br/
            = image_tag "user.webp", width:"100%";
          td
            | 「『ファクタリンク』を通じて初めてファクタリングのオンライン契約を行いました。ご紹介頂いた会社様に丁寧に対応いただき、簡単に契約できました。」
- .col-xs-6
+ br/
+ .col-sm-6
    table.review.left
      col[width="30%"]
      col[width="70%"]
@@ -485,6 +489,27 @@ br/
            = image_tag "user.webp", width:"100%";
          td
            | 「ファクタリング会社にはそれぞれ対応エリアがあるようで、どこを選べば良いか分からず『ファクタリンク』の一括見積もりを利用しました。いずれも私の地域でも対応可能な業者をご紹介いただき円滑に取引できました。」
+
+
+br
+hr.line
+br
+br
+br
+
+
+.row
+  .col-sm-12.push
+   span
+     | \ カンタン60秒入力! /
+   = link_to "#anchor" do
+     =image_tag 'click3.webp', width: '70%', class: 'center', alt:"ファクタリング一括見積りへまずは無料で一括見積"
+  .center   
+    | ※個人の方は申し込みできません。
+
+
+br
+br
 
 
 br
