--- a/app/views/estimate_mailer/received_email.text.erb
+++ b/app/views/estimate_mailer/received_email.text.erb
@@ -1,9 +1,8 @@
-ファクタリング一括見積りにお問い合わせがありました。
+『ムービーズ』にお問い合わせがありました。
 
 --------------------------
 会社名: <%= @estimate.co%>
-種別: <%= @estimate.select%>
-担当者名: <%= @estimate.name%>（<%= @estimate.name_kana%>）
+担当者名: <%= @estimate.name%>
 電話番号: <%= @estimate.tel%>
 住所: <%= @estimate.address%>
 メールアドレス: <%= @estimate.email%>
