--- a/app/views/estimate_mailer/send_email.text.erb
+++ b/app/views/estimate_mailer/send_email.text.erb
@@ -1,48 +1,23 @@
 <%= @estimate.co%> <%= @estimate.name%>様
 
-この度はファクタリング一括見積りにお問い合わせ頂きありがとうございました。
+この度はムービーズにお問い合わせ頂きありがとうございました。
 
-以下の内容にて承りました。
+以下の内容にて承りました。内容確認し、担当者よりご連絡差し上げます。
 
-これより各ファクタリング会社とやりとりを進め案件を進行させて頂きます。
-
-取引の流れについては以下のようになりますので事前にご確認下さいませ。
-__________________________________________________________________________________________
-
-【STEP.01】3~5社のファクタリング会社から自動返信メールが到着
-
-頂いた内容を元に、ファクタリング会社の選定を行います。選定後、ファクタリング会社から問い合わせ完了通知が届きます。
-追ってお電話が入りますので、売掛請求書をご準備の上対応お願いします。
-※通過率を上げるため可能であれば全てのファクタリング会社への対応をお願い致します。
-
-【STEP.02】条件の良いファクタリング会社を選定
-
-各ファクタリング会社から審査後見積りが提示されます。
-各社の手数料を比較し、最適な企業に決定しましょう。
-
-【STEP.03】契約締結後、即入金完了
-
-条件の良い会社へご連絡頂き、契約締結を行います。
-契約完了後、即時入金がされ完了となります。
-__________________________________________________________________________________________
-
-以上、完了までしっかりとサポートさせて頂きますので、何卒よろしくお願い致します。
+何卒よろしくお願い致します。
 
 --------------------------
 会社名: <%= @estimate.co%>
-種別: <%= @estimate.select%>
-担当者名: <%= @estimate.name%>（<%= @estimate.name_kana%>）
+担当者名: <%= @estimate.name%>
 電話番号: <%= @estimate.tel%>
 住所: <%= @estimate.address%>
 メールアドレス: <%= @estimate.email%>
 URL: <%= @estimate.url%>
-決算期（法人の場合）: <%= @estimate.settlement%>
-買取希望額: <%= @estimate.price %>
-使用用途: <%= @estimate.use %>
-備考:<%= @estimate.remarks %>
+業種: <%= @estimate.business %>
+希望納期: <%= @estimate.period %>
+制作したい動画内容・要望:<%= @estimate.remarks %>
 --------------------------
 
-
-ファクタリング一括見積
-Mail：factaring@factoru.jp
-URL：https://f.factoru.jp/
+株式会社Ri-Plus『ムービーズ』
+東京都中央区銀座6-13-16 ヒューリック銀座ウォールビル7F
+https://m.factoru.jp/
