--- a/app/views/estimates/_form.html.slim
+++ b/app/views/estimates/_form.html.slim
@@ -16,18 +16,7 @@ table.company.responsive-table
           | 会社名
         td.responsive-cell
          .input-container
-          = f.text_field :co, placeholder:"※個人の方は申し込みできません。"
-      tr
-        td.label-cell
-          strong.label 必須
-        td.arrow-box-cell
-          | 種別
-        td.responsive-cell
-         .input-container
-          = f.select(:select,[\
-            ["法人","法人"],\
-            ["個人事業主","個人事業主"],\
-           ],include_blank: "選択してください")
+          = f.text_field :co
       tr
         td.label-cell
           strong.label 必須
@@ -36,14 +25,6 @@ table.company.responsive-table
         td.responsive-cell
          .input-container
           = f.text_field :name
-      tr
-        td.label-cell
-          strong.label 必須
-        td.arrow-box-cell
-          | フリガナ
-        td.responsive-cell
-         .input-container
-          = f.text_field :name_kana
       tr
         td.label-cell
           strong.label 必須
@@ -73,42 +54,34 @@ table.company.responsive-table
           strong.label.label-blue 任意
         td.arrow-box-cell
           | URL
-          br
-          |（※ex.ない場合は『なし』と記入）
         td.responsive-cell
          .input-container
           = f.text_field :url
       tr
         td.label-cell
-          strong.label.label-blue 任意
+          strong.label 必須
         td.arrow-box-cell
-          | 決算期（法人の場合）
+          | 業種
         td.responsive-cell
          .input-container
-         = f.text_field :settlement
+          = f.text_field :business
       tr
         td.label-cell
           strong.label 必須
         td.arrow-box-cell
-          | 買取希望額
+          | 希望納期
         td.responsive-cell
          .input-container
-          = f.text_field :price
-          | 円
+          = f.select(:period,[\
+            ["なるべく早く","なるべく早く"],\
+            ["急ぎではない","急ぎではない"],\
+            ["決まっていない","決まっていない"],\
+           ],include_blank: "選択してください")
       tr
         td.label-cell
           strong.label 必須
         td.arrow-box-cell
-          | 使用用途
-        td.responsive-cell
-         .input-container
-          = f.text_field :use
-          | 円
-      tr
-        td.label-cell
-          strong.label.label-blue 任意
-        td.arrow-box-cell
-          | 備考
+          | 制作したい動画内容・要望
         td.responsive-cell
          .input-container
           = f.text_area :remarks
