--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,7 +7,7 @@ html
       .row
         .col-xs-3
            = link_to "/"
-            =image_tag "rogo.webp", class:"header-image", alt:"ファクタリングの一括比較見積りなら『ファクタリンク』"
+            =image_tag "logo.webp", class:"header-image", alt:"ファクタリングの一括比較見積りなら『ファクタリンク』"
         .col-xs-7
         .col-xs-2
                 .navToggle
@@ -65,5 +65,5 @@ html
       = yield
   br
   br
-  footer
+  /footer
    = render template: 'layouts/_footer.html.slim'
