--- a/app/views/estimate_mailer/received_email.text.erb
+++ b/app/views/estimate_mailer/received_email.text.erb
@@ -7,8 +7,7 @@
 住所: <%= @estimate.address%>
 メールアドレス: <%= @estimate.email%>
 URL: <%= @estimate.url%>
-決算期（法人の場合）: <%= @estimate.settlement%>
-買取希望額: <%= @estimate.price %>
-使用用途: <%= @estimate.use %>
-備考:<%= @estimate.remarks %>
+業種: <%= @estimate.business %>
+希望納期: <%= @estimate.period %>
+制作したい動画内容・要望:<%= @estimate.remarks %>
 --------------------------
