--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -8,6 +8,7 @@ br
   .row
     .col-sm-6
        = image_tag "pixta.jpeg", class: "pc-image"
+       = image_tag "pixta.jpeg", class: "mobile-image"
     .col-sm-6
         h1
          .index-3
