--- a/app/views/layouts/_head.html.slim
+++ b/app/views/layouts/_head.html.slim
@@ -13,9 +13,9 @@ script[src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"]
 = display_meta_tags(default_meta_tags)
 = favicon_link_tag('favicon.ico')
 <!-- Google tag (gtag.js) -->
-script[async src="https://www.googletagmanager.com/gtag/js?id=G-NR0Q5H8J4K"]
+script[async src="https://www.googletagmanager.com/gtag/js?id=AW-11193164988"]
 script
  | window.dataLayer = window.dataLayer || [];
  | function gtag(){dataLayer.push(arguments);}
  | gtag('js', new Date());
- | gtag('config', 'G-NR0Q5H8J4K');
+ | gtag('config', 'AW-11193164988');
